# LitTTC

./: ARCHITECTURE.md  AndroidManifest.xml  Cargo.toml  GDD.md  MASTER_TASK_LIST.md  README.md  ROADMAP.md  TECHNICAL_MANUAL.md  TODO_FULL_PLAN.md  import_curriculum.py  index.html  itch_page.md  mock_curriculum.csv  save.json.bak  task.md  test_event.rs
LitTTC/: Cargo.toml  task.md
LitTTC/assets/: etymology_db.json
LitTTC/scripts/: generate_music.py
LitTTC/src/: lib.rs  main.rs
LitTTC/src/core/: ar_capture.rs  asset_catalog.rs  battle.rs  commands.rs  companion.rs  components.rs  database.rs  deck.rs  hud.rs  input.rs  music.rs  overworld.rs  pet_collection.rs  pet_reveal.rs  quest.rs  render.rs  settings.rs  tutorial.rs
LitTTC/tests/: integration_tests.rs
assets/: etymology_db.json  lore_db.json  quest_data.json  synonym_database.json  word_database.json
crates/faces-protocol/src/: detect.rs  transition.rs
crates/lit-asset-forge/src/: comfy.rs  pipeline.rs
dashboard/: index.html
docs/: 2D_MODE.md  MUSIC_DESIGN.md  TAO_OF_FUN_REVIEW.md
experiments/godot-spike/: README.md  icon.svg.import  project.godot
experiments/godot-spike/scenes/: battle.gd  battle.tscn  collecting.gd  collecting.tscn  main_menu.gd  main_menu.gd.uid  main_menu.tscn  (+4 more)
legacy/: Cargo.toml.pre-workspace.bak
src/: altar.rs  battle.rs  chat.rs  commands.rs  components.rs  database.rs  deck.rs  hand_tracking.rs  hud.rs  input.rs  letter.rs  lib.rs  main.rs  menu.rs  paywall.rs  quest.rs  render.rs  save.rs  spatial_ui.rs  time_cycle.rs  tutorial.rs
tests/: integration_tests.rs
(+28 files in other folders)
