[workspace]
resolver = "2"
members = [
    "LitTTC",
    "crates/*",
]

[profile.dev]
opt-level = 1

[patch.crates-io]
# Patch jni 0.22.4 to avoid a startup panic on Android where the JNI exception
# clears between exception_check() and exception_occurred().
jni = { path = "crates/jni-0.22.4-android-fix" }
